// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropzone accept single file by default 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 icmjSc"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="StyledBox-sc-13pk1d4-0 eEjmTS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eQTSO"
      >
        <span
          class="StyledText-sc-1sadyjn-0 bnqisW"
        >
          gremlin.png
        </span>
      </div>
      <button
        aria-label="remove gremlin.png"
        class="StyledButton-sc-323bzc-0 kQcSJk"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="StyledIcon-ofa7kd-0 iOkQrb"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,7 L17,17 M7,17 L17,7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dropzone removes file when remove button is clicked 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 doFbKC"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <span
      class="StyledText-sc-1sadyjn-0 fWSbXS"
    >
      Drag and drop or 
      <a
        class="StyledAnchor-sc-1rp7lwl-0 jgeOSx"
      >
        choose
      </a>
       
      a file
    </span>
  </div>
</div>
`;

exports[`Dropzone renders basic dropzone 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 doFbKC"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <span
      class="StyledText-sc-1sadyjn-0 fWSbXS"
    >
      Drag and drop or 
      <a
        class="StyledAnchor-sc-1rp7lwl-0 jgeOSx"
      >
        choose
      </a>
       
      a file
    </span>
  </div>
</div>
`;

exports[`Dropzone renders correct starting text for multiple files 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 doFbKC"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <span
      class="StyledText-sc-1sadyjn-0 fWSbXS"
    >
      Drag and drop or 
      <a
        class="StyledAnchor-sc-1rp7lwl-0 jgeOSx"
      >
        choose
      </a>
       
      files
    </span>
  </div>
</div>
`;

exports[`Dropzone renders correct starting text for single file 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 doFbKC"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <span
      class="StyledText-sc-1sadyjn-0 fWSbXS"
    >
      Drag and drop or 
      <a
        class="StyledAnchor-sc-1rp7lwl-0 jgeOSx"
      >
        choose
      </a>
       
      a file
    </span>
  </div>
</div>
`;

exports[`Dropzone renders file preview 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 icmjSc"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="StyledBox-sc-13pk1d4-0 eEjmTS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eQTSO"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bCvkuC"
        >
          <img
            class="StyledImage-ey4zx9-0 UumnI"
          />
        </div>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gufrXq"
        />
        <span
          class="StyledText-sc-1sadyjn-0 bnqisW"
        >
          gremlin.png
        </span>
      </div>
      <button
        aria-label="remove gremlin.png"
        class="StyledButton-sc-323bzc-0 kQcSJk"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="StyledIcon-ofa7kd-0 iOkQrb"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,7 L17,17 M7,17 L17,7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dropzone renders file size and calculates correct suffix 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 icmjSc"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="StyledBox-sc-13pk1d4-0 eEjmTS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eQTSO"
      >
        <span
          class="StyledText-sc-1sadyjn-0 bnqisW"
        >
          gremlin.png
        </span>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gufrXq"
        />
        <span
          class="StyledText-sc-1sadyjn-0 fWSbXS"
        >
          10.0
           
          KB
        </span>
      </div>
      <button
        aria-label="remove gremlin.png"
        class="StyledButton-sc-323bzc-0 kQcSJk"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="StyledIcon-ofa7kd-0 iOkQrb"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,7 L17,17 M7,17 L17,7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dropzone renders remove button 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 icmjSc"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="StyledBox-sc-13pk1d4-0 eEjmTS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eQTSO"
      >
        <span
          class="StyledText-sc-1sadyjn-0 bnqisW"
        >
          gremlin.png
        </span>
      </div>
      <button
        aria-label="remove gremlin.png"
        class="StyledButton-sc-323bzc-0 kQcSJk"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="StyledIcon-ofa7kd-0 iOkQrb"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,7 L17,17 M7,17 L17,7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dropzone truncates text for long file name 1`] = `
<div>
  <div
    class="StyledBox-sc-13pk1d4-0 icmjSc"
    tabindex="0"
  >
    <input
      accept=""
      autocomplete="off"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="StyledBox-sc-13pk1d4-0 eEjmTS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eQTSO"
      >
        <span
          class="StyledText-sc-1sadyjn-0 bnqisW"
        >
          very-long-image...
        </span>
      </div>
      <button
        aria-label="remove very-long-image-title-that-should-be-truncated.png"
        class="StyledButton-sc-323bzc-0 kQcSJk"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="StyledIcon-ofa7kd-0 iOkQrb"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,7 L17,17 M7,17 L17,7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
